# npgrad

./: README.md  pyproject.toml
npgrad/: engine.py  layers.py  numpy_ops.py  tensor_ops.py
test/: test_arithmetic.py  test_layers.py  test_tensor_ops.py
